--- a/oppgave_2/package.json
+++ b/oppgave_2/package.json
@@ -105,7 +105,7 @@
   },
   "engines": {
     "node": ">=18.13.0",
-    "pnpm": ">=8.6.11"
+    "npm": ">=8.6.11"
   },
-  "packageManager": "pnpm@8.10.0"
+  "packageManager": "npm@8.10.0"
 }
