--- a/oppgave_2/package.json
+++ b/oppgave_2/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "predev": "prisma generate && prisma db push && pnpm run seed",
+    "predev": "prisma generate && prisma db push && npm run seed",
     "db:generate": "prisma generate",
     "dev": "next dev",
     "e2e": "playwright test",
@@ -13,7 +13,7 @@
     "e2e:report": "playwright show-report",
     "e2e:ui": "playwright test --ui",
     "lint": "eslint . --max-warnings 0",
-    "lint:fix": "pnpm run lint --fix",
+    "lint:fix": "npm run lint --fix",
     "seed": "tsx ./prisma/seed.ts",
     "start": "next start",
     "test": "vitest run",
@@ -105,7 +105,7 @@
   },
   "engines": {
     "node": ">=18.13.0",
-    "pnpm": ">=8.6.11"
+    "npm": ">=8.6.11"
   },
-  "packageManager": "pnpm@8.10.0"
+  "packageManager": "npm@8.10.0"
 }
