--- a/oppgave_1/package.json
+++ b/oppgave_1/package.json
@@ -62,6 +62,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/eslint": "^8.44.6",
+    "@types/jest": "^29.5.10",
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.33",
     "@types/react-color": "^3.0.9",
